--- a/main.css
+++ b/main.css
@@ -1,3 +1,9 @@
+/* ROOT VARIABLES 
+===============================================================
+*/
+:root {
+  --white: #fff;
+}
 * {
   margin: 0;
   padding: 0;
@@ -8,30 +14,94 @@
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background: #fff;
+  background: var(--white);
   overflow: hidden;
 }
 .page {
-  border: 4px solid red;
+  /* border: 4px solid red; */
   width: 95vw;
   height: 100vh;
 }
 
+/* 
+================================================================
+nav
+================================================================
+*/
+
 .nav {
   display: flex;
-  border: 4px solid green;
+  /* border: 4px solid green; */
   height: 65px;
   justify-content: center;
   align-items: center;
 }
 
 .nav-center {
-  border: 4px solid blue;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  /* border: 4px solid blue; */
   height: 80%;
   width: 100%;
   margin: 2rem;
+  background: #008064;
+}
+
+.nav-logo {
+  display: flex;
+  align-items: center;
+  /* border: 4px solid pink; */
+}
+.nav-logo h3 {
+  color: white;
+  padding-left: 1rem;
 }
 
 .nav-logo img {
-  height: 64px;
+  height: 50px;
+  padding-left: 5px;
 }
+.nav-links {
+  display: none;
+  flex-direction: row;
+  justify-content: space-between;
+  /* border: 4px solid pink; */
+}
+
+.nav-links li {
+  list-style: none;
+  padding: 2rem;
+  font-family: "Comfortaa", cursive;
+  color: white;
+}
+
+.nav-links a {
+  text-decoration-line: none;
+}
+.nav-links a:visited {
+  color: #008396;
+}
+
+.nav-btn button {
+  background: none;
+  color: white;
+  border: none;
+  padding-right: 1rem;
+  font-size: 1.5rem;
+}
+
+@media screen and (min-width: 768px) {
+  .nav-links {
+    display: flex;
+  }
+  .nav-btn {
+    display: none;
+  }
+}
+
+/* 
+================================================================
+template
+================================================================
+*/
