add hero and main inital layout

--- a/main.css
+++ b/main.css
@@ -19,8 +19,10 @@
 }
 .page {
   /* border: 4px solid red; */
-  width: 95vw;
+  width: 97vw;
   height: 100vh;
+  background-color: #e6fff5;
+  border-radius: 20px;
 }
 
 /* 
@@ -54,7 +56,7 @@ nav
   /* border: 4px solid pink; */
 }
 .nav-logo h3 {
-  color: white;
+  color: #e6fff5;
   padding-left: 1rem;
   margin-top: 1rem;
   margin-bottom: 1rem;
@@ -65,29 +67,38 @@ nav
   padding-left: 5px;
 }
 .nav-links {
-  display: none;
-  flex-direction: row;
+  display: flex;
+  position: relative;
+  /* border: 4px solid red; */
+  flex-direction: column;
   justify-content: space-between;
-  /* border: 4px solid pink; */
+  margin: 0 1.75rem;
+  border-radius: 20px;
 }
-
+.hide {
+  display: none;
+}
 .nav-links li {
+  color: #e6fff5;
+  background-color: #008064;
+  padding: 0.5rem 0;
+  padding-left: 1rem;
+  width: 100%;
   list-style: none;
-  padding: 2rem;
   font-family: "Comfortaa", cursive;
-  color: white;
+  color: #e6fff5;
 }
-
 .nav-links a {
   text-decoration-line: none;
 }
-.nav-links a:visited {
-  color: #008396;
+.nav-link {
+  color: #e6fff5;
+  text-decoration: none;
+  list-style: none;
 }
-
 .nav-btn button {
   background: none;
-  color: white;
+  color: #e6fff5;
   border: none;
   padding-right: 1rem;
   font-size: 1.5rem;
@@ -117,14 +128,34 @@ nav
   }
 }
 
-@media screen and (min-width: 768px) {
-  .nav-links {
-    display: flex;
-  }
-  .nav-btn {
-    display: none;
-  }
+/* 
+================================================================
+hero
+================================================================
+*/
+.hero-ctn {
+  display: flex;
+  position: relative;
 }
+.hero-text {
+  position: absolute;
+  width: 100%;
+  z-index: 1;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  top: 3rem;
+}
+.hero-img {
+  width: 98%;
+  border-radius: 15px;
+}
+
+/* 
+================================================================
+main
+================================================================
+*/
 
 /* 
 ================================================================
