--- a/main.css
+++ b/main.css
@@ -15,14 +15,14 @@
   align-items: center;
   min-height: 100vh;
   background: var(--white);
-  overflow: hidden;
 }
 .page {
   /* border: 4px solid red; */
   width: 97vw;
-  height: 100vh;
+  height: 100%;
   background-color: #e6fff5;
   border-radius: 20px;
+  overflow-y: scroll;
 }
 
 /* 
@@ -136,6 +136,7 @@ hero
 .hero-ctn {
   display: flex;
   position: relative;
+  border: 4px solid pink;
 }
 .hero-text {
   position: absolute;
@@ -147,7 +148,7 @@ hero
   top: 3rem;
 }
 .hero-img {
-  width: 98%;
+  width: 95vw;
   border-radius: 15px;
 }
 
@@ -156,7 +157,26 @@ hero
 main
 ================================================================
 */
-
+.main {
+  border: 4px solid blue;
+  display: flex;
+  position: relative;
+}
+.main-img {
+  width: 95vw;
+  border-radius: 15px;
+  top: 0;
+}
+.main-content {
+  position: absolute;
+  z-index: 2;
+  padding: 2rem;
+  /* border: 4px solid green; */
+  margin: 2rem;
+  margin-right: 25rem;
+  background-color: #6c6c6c53;
+  border-radius: 15px;
+}
 /* 
 ================================================================
 template
