add about section and form to index

--- a/main.css
+++ b/main.css
@@ -139,7 +139,7 @@ hero
 .hero-ctn {
   display: flex;
   position: relative;
-  border: 4px solid pink;
+  /* border: 4px solid pink; */
 }
 .hero-text {
   position: absolute;
@@ -148,7 +148,7 @@ hero
   justify-content: center;
   align-items: center;
   text-align: center;
-  top: 3rem;
+  top: 2.5rem;
 }
 .hero-img {
   width: 95vw;
@@ -161,7 +161,7 @@ main
 ================================================================
 */
 .main {
-  border: 4px solid blue;
+  /* border: 4px solid blue; */
   display: flex;
   position: relative;
 }
@@ -189,7 +189,7 @@ main 2
 ================================================================
 */
 .main2 {
-  border: 4px solid blue;
+  /* border: 4px solid blue; */
   display: flex;
   position: relative;
 }
@@ -234,9 +234,70 @@ footer
 .page-footer a {
   color: #008064;
 }
+/* 
+================================================================
+main about
+================================================================
+*/
+.main-about-ctn {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+  height: 50vh;
+  padding: 1rem;
+}
+.about-content {
+  width: 50%;
+  /* border: 4px solid blue; */
+  display: flex;
+  text-align: center;
+  flex-direction: column;
+}
+
+.about-content p {
+  padding-top: 1rem;
+}
 
 /* 
 ================================================================
-template
+form
 ================================================================
 */
+.about-form {
+  box-sizing: border-box;
+  width: 200px;
+  height: 200px;
+  margin-right: 3rem;
+  /* border: 4px solid red; */
+  position: relative;
+}
+.form-row input {
+  border: none;
+  box-shadow: 0 0 15px 4px rgba(0, 0, 0, 0.06);
+}
+.form-row textarea {
+  border: none;
+  box-shadow: 0 0 15px 4px rgba(0, 0, 0, 0.06);
+}
+
+textarea {
+  height: 50px;
+  width: 97%;
+  box-sizing: border-box;
+}
+/* 
+================================================================
+main about
+================================================================
+*/
+/* 
+================================================================
+main about
+================================================================
+*/
+/* 
+================================================================
+main about
+================================================================
+*/ ;
