--- a/main.css
+++ b/main.css
@@ -307,9 +307,34 @@ textarea {
 }
 /* 
 ================================================================
-main about
+about
 ================================================================
 */
+.main {
+  /* border: 4px solid blue; */
+  display: flex;
+  position: relative;
+  margin-top: 0.5rem;
+}
+.about-img {
+  width: 95vw;
+  border-radius: 15px;
+  top: 0;
+}
+.main-content {
+  position: absolute;
+  z-index: 2;
+  padding: 2rem;
+  /* border: 4px solid green; */
+  margin: 1rem;
+  margin-right: 25rem;
+  background-color: #e6fff579;
+  border-radius: 15px;
+}
+.main-content p {
+  padding-top: 1rem;
+}
+
 /* 
 ================================================================
 main about
@@ -319,4 +344,9 @@ main about
 ================================================================
 main about
 ================================================================
-*/ ;
+*/
+/* 
+================================================================
+main about
+================================================================
+*/
