add properties page image, text placeholder

--- a/main.css
+++ b/main.css
@@ -348,9 +348,14 @@ contact
 }
 /* 
 ================================================================
-main about
+properties
 ================================================================
 */
+.grid-ctn {
+  display: grid;
+  grid-template-columns: 3;
+  grid-template-rows: 3;
+}
 /* 
 ================================================================
 main about
