--- a/main.css
+++ b/main.css
@@ -353,8 +353,18 @@ properties
 */
 .grid-ctn {
   display: grid;
-  grid-template-columns: 3;
-  grid-template-rows: 3;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  border: 4px solid blue;
+}
+.grid {
+  height: 5rem;
+  width: 5rem;
+  border: 4px solid red;
+}
+.grid img {
+  width: 100%;
+  height: 3rem;
 }
 /* 
 ================================================================
