--- a/main.css
+++ b/main.css
@@ -356,15 +356,24 @@ properties
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
   border: 4px solid blue;
+  width: 90vw;
 }
 .grid {
   height: 15rem;
   width: 15rem;
   border: 4px solid red;
+  margin: 1rem 0;
 }
 .grid img {
   width: 100%;
   height: 10rem;
+}
+.ctn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  border: 4px solid green;
 }
 /* 
 ================================================================
